@@ -77,11 +77,15 @@ public class ExportService {
                 user, startDate.atStartOfDay(), endDate.atTime(LocalTime.MAX));
         long reviewCount = reviewRepository.countByUserAndCreatedTimeBetween(
                 user, startDate.atStartOfDay(), endDate.atTime(LocalTime.MAX));
-        // 선호하는 작가, 선호하는 장르, 기록 키드
-        List<GenreName> genres = userBookRepository.findTopGenreByUserAndCreatedTimeBetween(user, startDate.atStartOfDay(), endDate.atTime(LocalTime.MAX));
-        GenreName mostReadGenre = genres.get(0);
-        List<String> authors = userBookRepository.findTopAuthorByUserAndCreatedTimeBetween(user, startDate.atStartOfDay(), endDate.atTime(LocalTime.MAX));
-        String mostReadAuthor = authors.get(0);
+        // 선호하는 작가, 선호하는 장르, 기록 키워드
+        List<GenreName> genres = userBookRepository.findTopGenreByUserAndCreatedTimeBetween(
+                user, startDate.atStartOfDay(), endDate.atTime(LocalTime.MAX));
+        GenreName mostReadGenre = genres.isEmpty() ? null : genres.getFirst();
+
+        List<String> authors = userBookRepository.findTopAuthorByUserAndCreatedTimeBetween(
+                user, startDate.atStartOfDay(), endDate.atTime(LocalTime.MAX));
+        String mostReadAuthor = authors.isEmpty() ? null : authors.getFirst();
+
         UserKeywordResponseDto keywordResponse = userReadingReportService.getUserKeywordWithLimit(user.getUserId(), 1);
         return new ExportStatsResponseDto(
                 nickname,
